--- a/Recurrent Neural netoworks - word prediction.ipynb
+++ b/Recurrent Neural netoworks - word prediction.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this tutorial, we will implement a recurrent neural network which is able to classify images. The dataset used here is called MNIST consisting of handwritten digits."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,25 +39,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "2\n",
-      "The man ate the apple.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build the data.\n",
     "train_sentences = [\"The man ate the apple.\", \"Two women running on the beach.\", \"Everybody read this book.\"]\n",
-    "val_sentences = [\"A blue bird is singing on the tree.\", \"People were excited about the election.\"]\n",
-    "\n",
-    "print(len(train_sentences))\n",
-    "print(len(val_sentences))\n",
-    "print(train_sentences[0])"
+    "val_sentences = [\"A blue bird is singing on the tree.\", \"People were excited about the election.\"]"
    ]
   },
   {
@@ -102,14 +95,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<UNK>', '<SOS>', 'the', '.', '<EOS>', 'man', 'ate', 'apple', 'two', 'women', 'running', 'on', 'beach', 'everybody', 'read', 'this', 'book']\n",
-      "17\n"
+      "['<UNK>', '<SOS>', 'the', '.', '<EOS>', 'man', 'ate', 'apple', 'two', 'women', 'running', 'on', 'beach', 'everybody', 'read', 'this', 'book']\n"
      ]
     }
    ],
    "source": [
-    "print(vocabulary)\n",
-    "print(len(vocabulary))"
+    "# Let's see what the vocabulary looks like:\n",
+    "print(vocabulary)"
    ]
   },
   {
@@ -118,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Building the LSTM network:\n",
+    "# Now, we can build the LSTM network:\n",
     "class EncoderLSTM(nn.Module):\n",
     "    def __init__(self, input_size, hidden_size, output_size):\n",
     "        super(EncoderLSTM, self).__init__()\n",
@@ -150,33 +142,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the man ate the apple.\n",
-      "[1, 2, 5, 6, 2, 7, 3, 4]\n",
-      "torch.Size([7])\n",
-      "tensor(2, device='cuda:0')\n"
-     ]
-    }
-   ],
-   "source": [
-    "sentence = \"the man ate the apple.\"\n",
-    "print(sentence)\n",
-    "word_indices = preprocess_numberize(sentence.lower())\n",
-    "print(word_indices)\n",
-    "target_tensor = torch.LongTensor(word_indices[1:]).cuda()\n",
-    "print(target_tensor.shape)\n",
-    "#decoder_input = Variable(torch.FloatTensor([[embeddings[target_variable[0].data[0]]]]))\n",
-    "print(target_tensor[0].data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
        "EncoderLSTM(\n",
@@ -186,7 +151,7 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,15 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training the network:\n",
+    "# We will write a function to train the network:\n",
     "learning_rate = 0.001\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
-    "#optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate, nesterov=True, momentum=0.9)\n",
     "\n",
     "def train(target_tensor,\n",
     "         model,\n",
@@ -268,120 +232,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/setareh/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:36: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
+      "/home/setareh/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:35: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch[1], sentence[1] loss: 0.284\n",
-      "epoch[2], sentence[1] loss: 0.282\n",
-      "epoch[3], sentence[1] loss: 0.279\n",
-      "epoch[4], sentence[1] loss: 0.277\n",
-      "epoch[5], sentence[1] loss: 0.274\n",
-      "epoch[6], sentence[1] loss: 0.270\n",
-      "epoch[7], sentence[1] loss: 0.263\n",
-      "epoch[8], sentence[1] loss: 0.252\n",
-      "epoch[9], sentence[1] loss: 0.235\n",
-      "epoch[10], sentence[1] loss: 0.222\n",
-      "epoch[11], sentence[1] loss: 0.220\n",
-      "epoch[12], sentence[1] loss: 0.219\n",
-      "epoch[13], sentence[1] loss: 0.216\n",
-      "epoch[14], sentence[1] loss: 0.213\n",
-      "epoch[15], sentence[1] loss: 0.210\n",
-      "epoch[16], sentence[1] loss: 0.209\n",
+      "epoch[1], sentence[1] loss: 0.282\n",
+      "epoch[2], sentence[1] loss: 0.279\n",
+      "epoch[3], sentence[1] loss: 0.277\n",
+      "epoch[4], sentence[1] loss: 0.274\n",
+      "epoch[5], sentence[1] loss: 0.271\n",
+      "epoch[6], sentence[1] loss: 0.266\n",
+      "epoch[7], sentence[1] loss: 0.258\n",
+      "epoch[8], sentence[1] loss: 0.246\n",
+      "epoch[9], sentence[1] loss: 0.231\n",
+      "epoch[10], sentence[1] loss: 0.225\n",
+      "epoch[11], sentence[1] loss: 0.225\n",
+      "epoch[12], sentence[1] loss: 0.223\n",
+      "epoch[13], sentence[1] loss: 0.218\n",
+      "epoch[14], sentence[1] loss: 0.215\n",
+      "epoch[15], sentence[1] loss: 0.212\n",
+      "epoch[16], sentence[1] loss: 0.210\n",
       "epoch[17], sentence[1] loss: 0.207\n",
-      "epoch[18], sentence[1] loss: 0.205\n",
-      "epoch[19], sentence[1] loss: 0.203\n",
-      "epoch[20], sentence[1] loss: 0.200\n",
-      "epoch[21], sentence[1] loss: 0.198\n",
-      "epoch[22], sentence[1] loss: 0.195\n",
-      "epoch[23], sentence[1] loss: 0.192\n",
-      "epoch[24], sentence[1] loss: 0.189\n",
-      "epoch[25], sentence[1] loss: 0.186\n",
-      "epoch[26], sentence[1] loss: 0.183\n",
-      "epoch[27], sentence[1] loss: 0.180\n",
-      "epoch[28], sentence[1] loss: 0.178\n",
-      "epoch[29], sentence[1] loss: 0.175\n",
-      "epoch[30], sentence[1] loss: 0.172\n",
-      "epoch[31], sentence[1] loss: 0.169\n",
-      "epoch[32], sentence[1] loss: 0.166\n",
-      "epoch[33], sentence[1] loss: 0.163\n",
-      "epoch[34], sentence[1] loss: 0.160\n",
-      "epoch[35], sentence[1] loss: 0.158\n",
-      "epoch[36], sentence[1] loss: 0.155\n",
-      "epoch[37], sentence[1] loss: 0.152\n",
-      "epoch[38], sentence[1] loss: 0.150\n",
-      "epoch[39], sentence[1] loss: 0.147\n",
-      "epoch[40], sentence[1] loss: 0.144\n",
-      "epoch[41], sentence[1] loss: 0.142\n",
-      "epoch[42], sentence[1] loss: 0.139\n",
-      "epoch[43], sentence[1] loss: 0.136\n",
-      "epoch[44], sentence[1] loss: 0.134\n",
-      "epoch[45], sentence[1] loss: 0.131\n",
-      "epoch[46], sentence[1] loss: 0.128\n",
-      "epoch[47], sentence[1] loss: 0.126\n",
-      "epoch[48], sentence[1] loss: 0.129\n",
-      "epoch[49], sentence[1] loss: 0.142\n",
-      "epoch[50], sentence[1] loss: 0.125\n",
-      "epoch[51], sentence[1] loss: 0.129\n",
-      "epoch[52], sentence[1] loss: 0.115\n",
-      "epoch[53], sentence[1] loss: 0.117\n",
-      "epoch[54], sentence[1] loss: 0.112\n",
+      "epoch[18], sentence[1] loss: 0.204\n",
+      "epoch[19], sentence[1] loss: 0.200\n",
+      "epoch[20], sentence[1] loss: 0.197\n",
+      "epoch[21], sentence[1] loss: 0.194\n",
+      "epoch[22], sentence[1] loss: 0.190\n",
+      "epoch[23], sentence[1] loss: 0.187\n",
+      "epoch[24], sentence[1] loss: 0.184\n",
+      "epoch[25], sentence[1] loss: 0.180\n",
+      "epoch[26], sentence[1] loss: 0.176\n",
+      "epoch[27], sentence[1] loss: 0.173\n",
+      "epoch[28], sentence[1] loss: 0.170\n",
+      "epoch[29], sentence[1] loss: 0.166\n",
+      "epoch[30], sentence[1] loss: 0.163\n",
+      "epoch[31], sentence[1] loss: 0.160\n",
+      "epoch[32], sentence[1] loss: 0.157\n",
+      "epoch[33], sentence[1] loss: 0.154\n",
+      "epoch[34], sentence[1] loss: 0.151\n",
+      "epoch[35], sentence[1] loss: 0.148\n",
+      "epoch[36], sentence[1] loss: 0.145\n",
+      "epoch[37], sentence[1] loss: 0.143\n",
+      "epoch[38], sentence[1] loss: 0.140\n",
+      "epoch[39], sentence[1] loss: 0.138\n",
+      "epoch[40], sentence[1] loss: 0.135\n",
+      "epoch[41], sentence[1] loss: 0.133\n",
+      "epoch[42], sentence[1] loss: 0.130\n",
+      "epoch[43], sentence[1] loss: 0.128\n",
+      "epoch[44], sentence[1] loss: 0.125\n",
+      "epoch[45], sentence[1] loss: 0.124\n",
+      "epoch[46], sentence[1] loss: 0.126\n",
+      "epoch[47], sentence[1] loss: 0.124\n",
+      "epoch[48], sentence[1] loss: 0.140\n",
+      "epoch[49], sentence[1] loss: 0.118\n",
+      "epoch[50], sentence[1] loss: 0.127\n",
+      "epoch[51], sentence[1] loss: 0.132\n",
+      "epoch[52], sentence[1] loss: 0.116\n",
+      "epoch[53], sentence[1] loss: 0.115\n",
+      "epoch[54], sentence[1] loss: 0.115\n",
       "epoch[55], sentence[1] loss: 0.112\n",
       "epoch[56], sentence[1] loss: 0.110\n",
-      "epoch[57], sentence[1] loss: 0.106\n",
+      "epoch[57], sentence[1] loss: 0.107\n",
       "epoch[58], sentence[1] loss: 0.105\n",
-      "epoch[59], sentence[1] loss: 0.103\n",
-      "epoch[60], sentence[1] loss: 0.101\n",
-      "epoch[61], sentence[1] loss: 0.099\n",
-      "epoch[62], sentence[1] loss: 0.098\n",
-      "epoch[63], sentence[1] loss: 0.096\n",
-      "epoch[64], sentence[1] loss: 0.095\n",
-      "epoch[65], sentence[1] loss: 0.093\n",
-      "epoch[66], sentence[1] loss: 0.091\n",
-      "epoch[67], sentence[1] loss: 0.090\n",
-      "epoch[68], sentence[1] loss: 0.088\n",
-      "epoch[69], sentence[1] loss: 0.087\n",
-      "epoch[70], sentence[1] loss: 0.085\n",
-      "epoch[71], sentence[1] loss: 0.084\n",
-      "epoch[72], sentence[1] loss: 0.083\n",
-      "epoch[73], sentence[1] loss: 0.081\n",
-      "epoch[74], sentence[1] loss: 0.080\n",
-      "epoch[75], sentence[1] loss: 0.079\n",
-      "epoch[76], sentence[1] loss: 0.077\n",
-      "epoch[77], sentence[1] loss: 0.076\n",
-      "epoch[78], sentence[1] loss: 0.075\n",
-      "epoch[79], sentence[1] loss: 0.073\n",
-      "epoch[80], sentence[1] loss: 0.072\n",
-      "epoch[81], sentence[1] loss: 0.071\n",
-      "epoch[82], sentence[1] loss: 0.070\n",
-      "epoch[83], sentence[1] loss: 0.069\n",
-      "epoch[84], sentence[1] loss: 0.068\n",
-      "epoch[85], sentence[1] loss: 0.066\n",
-      "epoch[86], sentence[1] loss: 0.065\n",
-      "epoch[87], sentence[1] loss: 0.064\n",
-      "epoch[88], sentence[1] loss: 0.063\n",
-      "epoch[89], sentence[1] loss: 0.062\n",
-      "epoch[90], sentence[1] loss: 0.061\n",
-      "epoch[91], sentence[1] loss: 0.060\n",
-      "epoch[92], sentence[1] loss: 0.059\n",
-      "epoch[93], sentence[1] loss: 0.058\n",
-      "epoch[94], sentence[1] loss: 0.058\n",
-      "epoch[95], sentence[1] loss: 0.057\n",
-      "epoch[96], sentence[1] loss: 0.056\n",
-      "epoch[97], sentence[1] loss: 0.055\n",
-      "epoch[98], sentence[1] loss: 0.054\n",
-      "epoch[99], sentence[1] loss: 0.053\n",
-      "epoch[100], sentence[1] loss: 0.053\n"
+      "epoch[59], sentence[1] loss: 0.104\n",
+      "epoch[60], sentence[1] loss: 0.102\n",
+      "epoch[61], sentence[1] loss: 0.101\n",
+      "epoch[62], sentence[1] loss: 0.099\n",
+      "epoch[63], sentence[1] loss: 0.098\n",
+      "epoch[64], sentence[1] loss: 0.097\n",
+      "epoch[65], sentence[1] loss: 0.096\n",
+      "epoch[66], sentence[1] loss: 0.094\n",
+      "epoch[67], sentence[1] loss: 0.093\n",
+      "epoch[68], sentence[1] loss: 0.092\n",
+      "epoch[69], sentence[1] loss: 0.091\n",
+      "epoch[70], sentence[1] loss: 0.090\n",
+      "epoch[71], sentence[1] loss: 0.088\n",
+      "epoch[72], sentence[1] loss: 0.087\n",
+      "epoch[73], sentence[1] loss: 0.086\n",
+      "epoch[74], sentence[1] loss: 0.085\n",
+      "epoch[75], sentence[1] loss: 0.084\n",
+      "epoch[76], sentence[1] loss: 0.083\n",
+      "epoch[77], sentence[1] loss: 0.082\n",
+      "epoch[78], sentence[1] loss: 0.080\n",
+      "epoch[79], sentence[1] loss: 0.079\n",
+      "epoch[80], sentence[1] loss: 0.078\n",
+      "epoch[81], sentence[1] loss: 0.077\n",
+      "epoch[82], sentence[1] loss: 0.076\n",
+      "epoch[83], sentence[1] loss: 0.075\n",
+      "epoch[84], sentence[1] loss: 0.075\n",
+      "epoch[85], sentence[1] loss: 0.074\n",
+      "epoch[86], sentence[1] loss: 0.073\n",
+      "epoch[87], sentence[1] loss: 0.072\n",
+      "epoch[88], sentence[1] loss: 0.071\n",
+      "epoch[89], sentence[1] loss: 0.070\n",
+      "epoch[90], sentence[1] loss: 0.069\n",
+      "epoch[91], sentence[1] loss: 0.068\n",
+      "epoch[92], sentence[1] loss: 0.068\n",
+      "epoch[93], sentence[1] loss: 0.067\n",
+      "epoch[94], sentence[1] loss: 0.066\n",
+      "epoch[95], sentence[1] loss: 0.065\n",
+      "epoch[96], sentence[1] loss: 0.064\n",
+      "epoch[97], sentence[1] loss: 0.064\n",
+      "epoch[98], sentence[1] loss: 0.063\n",
+      "epoch[99], sentence[1] loss: 0.062\n",
+      "epoch[100], sentence[1] loss: 0.061\n"
      ]
     }
    ],
@@ -408,14 +372,12 @@
     "        total_loss += loss\n",
     "        if i % 10 == 0:\n",
     "            print('epoch[%d], sentence[%d] loss: %.3f' % (epoch+1, i+1, total_loss/10))\n",
-    "            total_loss = 0\n",
-    "            \n",
-    "##['<UNK>', '<SOS>', 'the', '.', '<EOS>', 'man', 'ate', 'apple', 'two', 'women', 'running', 'on', 'beach', 'everybody', 'read', 'this', 'book']"
+    "            total_loss = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -437,12 +399,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/setareh/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:26: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
+      "/home/setareh/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:27: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
      ]
     }
    ],
    "source": [
-    "# Let's test the training\n",
+    "# Let's test the training:\n",
+    "# to do so, we will input first half of words of each sentence in train_sentences and output the second half\n",
     "model.eval()\n",
     "for sentence in train_sentences:\n",
     "    print(sentence)\n",
@@ -474,8 +437,7 @@
     "        input_tensor = input_tensor.cuda() if use_cuda else input_tensor\n",
     "        output, hidden = model(input_tensor, hidden)\n",
     "    print(in_sentence)\n",
-    "    print(out_sentence)\n",
-    "    #print(' '.join(out_sentence))"
+    "    print(out_sentence)"
    ]
   },
   {
